# onramp-reranker

./: .dockerignore  .gitignore  Dockerfile  Dockerfile.gpu  Dockerfile.prebuilt  Dockerfile.vessl  Jenkinsfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: build-gpu-image.yml
app/: config.py  main.py  models.py  reranker.py
deploy/: reranker-canary-pod.yaml  reranker-inject-pod.yaml  reranker-service.yaml
scripts/: build-push-gpu.sh  build_onnx.py  loadtest.py  setup_reranker_canary.sh  sshd_hardening.conf  start-vessl.sh
tests/: test_api.py  test_reranker.py
